# softui

./: .gitignore  Cargo.toml  README.md  UI.md  check  rustc-ice-2025-08-25T08_36_08-31881.txt  rustc-ice-2025-08-25T08_56_13-40909.txt  rustc-ice-2025-08-25T08_59_18-41742.txt  rustc-ice-2025-10-03T05_43_32-41575.txt
docs/: Better input.md  Closures suck.md  Cross-frame hash coherence.md  Cross-platform.md  Data Layout.md  Defered Instantiation.md  Defered on click.md  Dynamic.md  Edge cases.md  Hit-testing.md  Ideas.md  Images.md  Layout Rules.md  List.md  Local context.md  Macros vs Tuples.md  Macros.md  Multi-pass 2.md  Multi-pass.md  Nested containers & tuples.md  Nodes.md  Platform.md  README.md  Readme.md  Spacing.md  State.md  Styling.md  TODO.md  Units.md
examples/: arena.rs  bary.rs  basic.rs  builder_only.rs  center.rs  closure.rs  collection.rs  color_picker.rs  crash.rs  custom.rs  custom_command.rs  dpi.rs  dragging.rs  dwrite.rs  dwrite_test.rs  dyn.rs  error.rs  flex.rs  font.rs  hittest.rs  image.rs  impl_error.rs  issue_image.rs  issues.rs  layout.rs  layout2.rs  layout3.rs  layout_h.rs  layout_v.rs  list.rs  maclaurin.rs  multi_pass.rs  nested_containers.rs  old.rs  on_click.rs  onclick.rs  powerplan_switcher.rs  primative.rs  relative.rs  retained.rs  (+17 more)
mockups/: Containers.md  Defered on click.md  Event Handlers on Container Children.md  Macros vs Tuple.md  Macros vs Tuples.md  Readme.md  Thread-safe context.md  UI.md  UI_ALT.md
softui/: Cargo.toml
softui-core/: Cargo.toml
softui-core/src/: lib.rs
softui/docs/: Defered Instantiation.md  FnMut transmute.md  MacOS.md  Missing features.md  On click.md  TODO.md
softui/examples/: custom_command.rs  dragging.rs  image.rs  slice.rs  svg.rs
softui/src/: atomic_float.rs  input.rs  lib.rs  main.rs  style.rs
softui/src/platform/: glfw.rs  minifb.rs  mod.rs  windows.rs
softui/src/widgets/: click.rs  container.rs  image.rs  layout.rs  rectangle.rs  svg.rs  text.rs
softui_proc/: Cargo.toml
softui_proc/src/: lib.rs  main.rs
src/: arena.rs  atomic_float.rs  button.rs  click.rs  color.rs  container.rs  flex.rs  flex_tests.rs  font.rs  glfw.rs  input.rs  layout.rs  lib.rs  macos.rs  macros.rs  main.rs  platform.rs  rectangle.rs  retained.rs  scaling.rs  style.rs  taffy.rs  taffy_custom.rs  text.rs  tree.rs  tree_simplier.rs  tree_tests.rs  tree_widget.rs  tuple.rs  tuple2.rs  tuple3.rs  unit.rs  view.rs  windows.rs
src/layout/: basic.rs  mod.rs  tests.rs
src/platform/: glfw.rs  minifb.rs  mod.rs  windows.rs
src/widgets/: basic.rs  button.rs  click.rs  container.rs  container2.rs  dwrite.rs  example.rs  generic.rs  image.rs  input.rs  layout.rs  layout2.rs  list.rs  mod.rs  rectangle.rs  rectangle_new.rs  str.rs  svg.rs  text.rs  text_immutable.rs  text_new.rs
