[package]
name = "softui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
# debug = 1

[features]
# default = ["image"]
# TODO: How can I make this less braindead?
profile = ["mini/profile", "window/profile"]
info = ["mini/info", "window/info"]
warn = ["mini/warn", "window/warn"]
error = ["mini/error", "window/error"]
svg = ["dep:resvg"]
image = ["dep:zune-image"]
dwrite = ["dep:dwrote"]
dhat-heap = ["dep:dhat"]

[dependencies]
# window = { version = "0.1.0", git = "https://github.com/zx3no/window" }
window = { version = "0.1.0", path = "../window" }
mini = { version = "0.1.0", git = "https://github.com/zx3no/mini" }
# mini = { version = "0.1.0", path = "../mini" }
crossbeam-queue = "0.3.11"
fontdue = { version = "0.9.0" }
resvg = { version = "0.42.0", optional = true }
dwrote = { version = "0.11.2", optional = true }
zune-image = { version = "0.4.15", optional = true, default-features = false, features = [
    "jpeg",
    "png",
    "metadata",
    # "simd",
    # "all"
] }
dhat = {version = "0.3.3", optional = true}
# lay_out = { version = "0.1.0", path = "../lay_out" }
# lay_out = { git = "https://github.com/zX3no/lay_out", version = "0.1.0" }
