[package]
name = "softui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
# debug = 1
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = true

[features]
# default = ["image"]
# TODO: How can I make this less braindead?
profile = ["mini/profile", "window/profile"]
info = ["mini/info", "window/info"]
warn = ["mini/warn", "window/warn"]
error = ["mini/error", "window/error"]
svg = ["dep:resvg"]
image = ["dep:zune-image"]
dwrite = ["dep:dwrote"]

[target.'cfg(windows)'.dependencies]
# window = { version = "0.1.0", git = "https://github.com/zx3no/window" }
dwrote = { version = "0.11.2", optional = true }
window = { version = "0.1.0", path = "../window" }

[target."cfg(not(windows))".dependencies]
minifb = "0.27.0"

[dependencies]
mini = { version = "0.1.0", git = "https://github.com/zx3no/mini" }
# mini = { version = "0.1.0", path = "../mini" }
crossbeam-queue = "0.3.12"
fontdue = { version = "0.9.3" }
resvg = { version = "0.42.0", optional = true }
zune-image = { version = "0.4.15", optional = true, default-features = false, features = [
    "jpeg",
    "png",
    "metadata",
    # "simd",
    # "all"
] }
taffy = { version = "0.9.2", default-features = false, features = ["flexbox", "taffy_tree", "std"] }
# windows = { version = "0.59.0", features = ["Win32_System_Services", "Win32_System_SystemServices"] }
# lay_out = { version = "0.1.0", path = "../lay_out" }
# lay_out = { git = "https://github.com/zX3no/lay_out", version = "0.1.0" }
