[package]
name = "softui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
svg = ["dep:resvg"]
image = ["dep:zune-image"]

[dependencies]
crossbeam-queue = "0.3.11"
# fontdue = { version = "0.7.3", features = ["parallel"] }
fontdue = { version = "0.9.0" }
# TODO: Add this behind a feature flag, not really a fan of the extra 60 dependencies.
# image = { version = "0.25.4", features = ["avif", "webp"], default-features = false }
mini = { git = "https://github.com/zx3no/mini", version = "0.1.0" }
resvg = { version = "0.42.0", optional = true, default-features = false }
softui-core = { version = "0.1.0", path = "../softui-core" }
zune-image = { version = "0.4.15", optional = true, default-features = false, features = [
    "jpeg",
    "png",
    "metadata"
    # "simd",
    # "all"
] }

[target.'cfg(windows)'.dependencies]
window = { version = "0.1.0", path = "../../window" }

[target."cfg(not(windows))".dependencies]
minifb = "0.27.0"
# glfw = "0.58.0"
